<resources>
    <string name="app_name">JetLaptop</string>

    <string name="email">sandhi372@gmail.com</string>
    <string name="name">Sandhi Karunia Sugihartana</string>

    <string name="search_hint">Search JetLaptop</string>
    <string name="empty_data">No data found in the list :(</string>
    <string name="empty_favorite">No data found in the favorite list :(</string>

    <string name="add_favorite">Add to Favorite</string>
    <string name="delete_favorite">Remove from Favorite</string>
    <string name="back">Back</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
</resources>