...
            end = 16.dp,
            bottom = 16.dp,
            top = 8.dp
        ),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier
            .testTag("lazy_column")
    ) {
        items(listLaptop, key = { it.id }) { item ->
            LaptopItem(
                id = item.id,
                name = item.name,
                image = item.image,
...
