...
                    )
                }
            }
        }
        Icon(
            imageVector = if (isFavorite) Icons.Rounded.Favorite else Icons.Outlined.FavoriteBorder,
            contentDescription = "icon_favorite",
            tint = if (!isFavorite) Color.Black else Color.Red,
            modifier = Modifier
                .align(Alignment.TopEnd)
                .size(24.dp)
                .testTag("icon_favorite")
                .clickable { onFavoriteIconClicked(id, !isFavorite) }
...
